<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/image_mainan"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:contentDescription="@string/image"
            android:paddingBottom="10dp"
            android:scaleType="centerInside"
            tools:src="@color/primaryDarkColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt1"
                style="@style/ButtonGeneral"
                android:layout_marginRight="2.5dp"
                android:text="@string/image_1"
/>

            <Button
                android:id="@+id/bt2"
                style="@style/ButtonGeneral"
                android:layout_marginHorizontal="2.5dp"
                android:text="@string/image_2"
 />

            <Button
                android:id="@+id/bt3"
                style="@style/ButtonGeneral"
                android:layout_marginHorizontal="2.5dp"
                android:text="@string/image_3"
 />

            <Button
                android:id="@+id/bt4"
                style="@style/ButtonGeneral"
                android:layout_marginLeft="2.5dp"
                android:text="@string/image_4"
                />

        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/tvJudul"-->
<!--            style="@style/TextSpec.Field"-->
<!--            android:layout_width="match_parent"-->

<!--            android:layout_height="wrap_content"-->
<!--            android:padding="8dp"-->
<!--            android:text="@string/judul"-->
<!--            android:textAlignment="textStart"-->
<!--            android:textAllCaps="true"-->
<!--            android:textStyle="bold" -->
<!--            -->
<!--            />-->

        <TextView
            android:id="@+id/tvJudul"
            style="@style/TextSpec.Field"
            android:text="@string/judul"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/primaryLightColor" />

        <TextView
            android:id="@+id/judul_mainan"
            style="@style/TextSpec.Value"
            android:padding="8dp"
            tools:text="judul_movies" />

        <TextView
            android:id="@+id/tvDeskripsi"
            style="@style/TextSpec.Field"
            android:layout_marginTop="15dp"
            android:padding="8dp"
            android:text="@string/deskripsi"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="@color/primaryLightColor" />

        <TextView
            android:id="@+id/deskripsi_mainan"
            style="@style/TextSpec.Value"
            android:padding="8dp"
            tools:text="sinopsis_desc" />

    </LinearLayout>
</ScrollView>