<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="7.5dp"
    android:layout_marginBottom="7.5dp"
    android:background="@color/secondaryTextColor"
    >
    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/image" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_title"
            style="@style/TextSpec.Field"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_item_subtitle"
            style="@style/TextSpec.Value"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/subtitle" />
    </LinearLayout>
</LinearLayout>